chore(section-message): add jds icon; add responsiveness; add template variant; fix overflow content

--- a/src/components/JdsSectionMessage/SectionMessage.scss
+++ b/src/components/JdsSectionMessage/SectionMessage.scss
@@ -23,6 +23,7 @@
 }
 
 .jds-section-message {
+  box-sizing: border-box;
   display: none;
   justify-content: flex-start;
   align-items: flex-start;
@@ -31,6 +32,7 @@
   border: 1px solid V.$blue-800;
   border-radius: 8px;
   gap: 20px;
+  min-width: 250px;
 
   &__icon {
     color: V.$blue-800;
@@ -54,6 +56,7 @@
 
     &__actions {
       display: flex;
+      flex-wrap: wrap;
       gap: 16px;
       margin-top: 12px;
 
